Bug 42548 approximate 6x XPInstall performance improvement, r=dbragg